<resources>
    <string name="app_name">DiamondZone</string>
    <string name="title_activity_main_layout">MainLayout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="person_name">User</string>
    <string name="all_Orders">7 Orders</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="proceed">Proceed with your</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forgot">Forgot Password?</string>
    <string name="signUp">Create an account or Sign Up</string>
    <string name="sign_Up">Sign Up</string>
    <string name="are">Are you</string>
    <string name="shopkeeper">Shopkeeper?</string>
    <string name="content">contentDescription</string>
    <string name="it">Its easier to sign up now</string>
    <string name="userName">User Name</string>
    <string name="or">Or</string>
    <string name="conti">Continue with Google</string>
    <string name="Shopkeeper">Shopkeeper</string>
    <string name="goToShop">Go to Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pages">55 Rs of 100 pages</string>
    <string name="how_many">Pages you want</string>
    <string name="extra">Extra +</string>
    <string name="total_pages">Total Pages </string>
    <string name="total_rs">Total Rs.</string>
    <string name="delivery_time">Delivery Timing = 06:30 PM - 07:30 PM</string>
    <string name="on_the_way">Your order is on the way</string>
    <string name="delivered">Your order is delivered</string>
    <string name="edit">Edit Order</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="payment">Payment Details</string>
    <string name="name">Name</string>
    <string name="room_num">Room Number</string>
    <string name="hostel_name">Hostel/Hall Name</string>
    <string name="other">Others</string>
    <string name="payOnline">Pay Online</string>
    <string name="cod">COD</string>
    <string name="place_Order">Place Order</string>
    <string name="other_one">nothing</string>
    <string name="page">Pages</string>
    <string name="rupees">Rupees</string>
    <string name="date">Date</string>
    <string name="send_data">Send Data</string>
    <string name="type_your_story_here">Type your story here...</string>
    <string name="story_title">Story title</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="rt_hall_polytechnic">RT Hall Polytechnic</string>
    <string name="mv_hall_polytechnic">MV Hall Polytechnic</string>
    <string name="Meghamani_parivar">Meghamani Parivar</string>
    <string name="diamond_jubilee_boys_hostel">Diamond Jubilee Boys Hostel</string>
    <string name="sj_hall_polytechnic">SJ Hall Polytechnic</string>
    <string name="know_more">Know More</string>
    <string name="education">“Education is the passport to the future,\nfor tomorrow belongs to those who prepare for it today.”</string>
    <string name="the_only">“The only person who is educated is the one\nwho has learned how to learn …and change.”</string>
    <string name="edu_open">“Education opens up the mind, expands it and\nallows you to improve your life in so many ways.”</string>
    <string name="edu_is">“Education is simply the soul of a society as\nit passes from one generation to another.”
    </string>
    <string name="do_not">“Do not confine your children to your own learning,\nfor they were born in another time.”</string>
    <string name="your">“Your attitude, not your aptitude,\nwill determine your altitude.”</string>
    <string name="reset_Password">You will get the mail after completing this step to reset password</string>
    <string name="your_order_is_delivered">Your Order is delivered</string>
    <string name="about">Team Diamond has started this, with an understanding of the problems around the hostelers and thinks about how to resolve it or make it easy. So initially the team has started with small initiative and future planning.\n\nThis app provides you online services of the hostelers needs. Now you can buy good journal papers instantly and online using this app with the best price and exciting surprises. Right now, we have just initiated with journal papers for MSU hall residential students afterward we are adding some new things according to your feedback and ideas.\n\nIf you have any idea but you do not know how to take initiative or other else and also need an app developer then we will give our best to support you. So for any help from our side or to know about our experience you are free to contact us.</string>
    <string name="phone_number">Phone Number</string>
    <string name="kartik_team">Kartik patel\nMech. Engg\nMSUTecho\nkartik_patel_0</string>
    <string name="Chirag_team">Chirag Gohil\nMech. Engg\nMSUTecho\nInsta id:cmgohil.10</string>
    <string name="Adil_team">Adil Parmar\nMech. Engg\nMSUTecho\nadil.parmar.13</string>
    <string name="our_team">Our Team</string>
    <string name="x">100 X </string>
    <string name="billing_details">Billing Details</string>
    <string name="gmail">diamondzone.contact@gmail.com</string>
    <string name="all_orders">All Orders</string>
    <string name="all_order_quote">“Business opportunities are like buses, there\'s always another one coming.”</string>
    <string-array name="HostelName">
        <item>RT hall polytechnic</item>
        <item>MV hall polytechnic</item>
        <item>SJ hall polytechnic</item>
        <item>Diamond Jubilee Boys Hostel</item>
        <item>Meghamani parivar diamond boys hostel</item>
        <item>Others</item>
    </string-array>
</resources>

