<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/printer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/content"
        android:src="@drawable/printer"/>

    <TextView
        android:id="@+id/proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/printer"
        android:layout_marginTop="12dp"
        android:text="@string/proceed"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/proceed"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login"
        android:textColor="@color/darkBlack"
        android:textSize="27sp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/edi"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:hint="@string/email_address"
        android:textAllCaps="false"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/email"
        android:background="@drawable/edi"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:layout_marginTop="15dp"
        android:elevation="10dp"
        android:background="@drawable/btn"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:text="@string/log_in"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/log_in"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:text="@string/forgot"/>

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/signUp"
        android:textColor="@color/blue"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/are"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/shopkeeper"
        android:text="@string/are"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/shopkeeper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/shopkeeper"
        android:textColor="@color/blue"
        android:textSize="18sp"/>
</RelativeLayout>