<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Payment_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/payment"
            android:textColor="@color/darkBlack"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/name_payment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textAllCaps="false"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/mobile_no_payment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit"
            android:hint="@string/mobile_number"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textAllCaps="false"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/room_number_Payment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit"
            android:hint="@string/room_num"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textAllCaps="false"
            android:textSize="16sp"/>

        <Spinner
            android:id="@+id/hostel_name_payment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/spinner"
            android:hint="@string/hostel_name"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:tag="Select Hostel"/>

        <EditText
            android:id="@+id/others_payment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit"
            android:hint="@string/other"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textAllCaps="false"
            android:textSize="16sp"/>

        <RadioGroup
            android:id="@+id/radio_grp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp">

            <RadioButton
                android:id="@+id/payOnline_Payment_Radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:text="@string/payOnline"
                android:textSize="18sp"/>

            <RadioButton
                android:id="@+id/cod_Payment_Radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_weight="1"
                android:checked="true"
                android:fontFamily="sans-serif-light"
                android:text="@string/cod"
                android:textSize="18sp"/>
        </RadioGroup>

        <Button
            android:id="@+id/place_Order_Payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btnblue"
            android:elevation="10dp"
            android:text="@string/place_Order"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp"
            tools:targetApi="lollipop"/>
    </LinearLayout>
</ScrollView>