<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:scrollbarThumbVertical="@android:color/transparent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sign_Up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/signUp"
            android:textColor="@color/darkBlack"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_Up"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:text="@string/it"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/it"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:background="@drawable/edi"
            android:hint="@string/userName"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textAllCaps="false"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/emailRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/userName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/edi"
            android:hint="@string/email_address"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textAllCaps="false"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/passwordRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/emailRegister"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/edi"
            android:hint="@string/password"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textAllCaps="false"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordRegister"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:background="@drawable/btnblue"
            android:elevation="10dp"
            android:text="@string/signUp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUpButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/or"
            android:textColor="@color/gray"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/gmailButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/or"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btnred"
            android:elevation="10dp"
            android:text="@string/conti"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </RelativeLayout>
</ScrollView>