<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@android:color/transparent"
    tools:context=".activity.Shopkeeper_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Shopkeeper"
            android:textColor="@color/darkBlack"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/email_ShopKeeper"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edi"
            android:hint="@string/email_address"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textAllCaps="false"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/password_ShopKeeper"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edi"
            android:hint="@string/password"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textAllCaps="false"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/log_in_ShopKeeper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btnblue"
            android:elevation="10dp"
            android:text="@string/goToShop"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp"/>
    </LinearLayout>
</ScrollView>