<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    
    <EditText
        android:id="@+id/reset_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="50dp"
        android:background="@drawable/edit"
        android:hint="@string/email_address"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/btnblue"
        android:elevation="10dp"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="19sp"
        tools:targetApi="lollipop" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/reset_Password"
        android:textColor="@color/black"
        android:textSize="18sp"/>

</LinearLayout>
