<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Story_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/send_pictures"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/content"
            android:src="@drawable/printer"/>

        <EditText
            android:id="@+id/send_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/story_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/darkBlack"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/send_thesis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/type_your_story_here"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/darkBlack"
            android:textSize="18sp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/send_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/btnblue"
            android:elevation="10dp"
            android:text="@string/send_data"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp"
            tools:targetApi="lollipop"/>
    </LinearLayout>
</ScrollView>