<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="40dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/person_name"
        android:textColor="@color/blue"
        android:layout_marginTop="4dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/imageView"
        android:text="@string/person_name"
        android:textSize="23sp"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/darkBlack"
        android:layout_toEndOf="@+id/imageView"
        android:layout_below="@+id/person_name"
        android:textSize="13sp"
        android:layout_height="wrap_content"
        android:text="@string/all_Orders" />

</RelativeLayout>
