<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@android:color/transparent"
    tools:context=".Fragment.Home_Fragment">
    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager.widget.ViewPager
                android:layout_width="match_parent"
                android:id="@+id/pager"
                android:layout_height="250dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">



            <TextView
                android:id="@+id/pages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-light"
                android:text="@string/pages"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/accepted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/pages"
                android:fontFamily="sans-serif-light"
                android:text="@string/delivery_time"
                android:textColor="@color/black"
                android:textSize="18sp"/>



            <TextView
                android:id="@+id/how_Many"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/accepted"
                android:layout_marginTop="14dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/how_many"
                android:textColor="@color/darkBlack"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/edit_How"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_below="@+id/accepted"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/edi"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="19sp"/>

            <TextView
                android:id="@+id/extra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/how_Many"
                android:layout_marginTop="14dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/extra"
                android:textColor="@color/darkBlack"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/edit_Extra"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_below="@+id/edit_How"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/edi"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="19sp"/>

            <Button
                android:id="@+id/ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/extra"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:background="@drawable/btnblue"
                android:elevation="10dp"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="19sp"/>

            <TextView
                android:id="@+id/total_pages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ok"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/total_pages"
                android:textColor="@color/darkBlack"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/edit_Pages"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_below="@+id/ok"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/edi"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="19sp"/>

            <TextView
                android:id="@+id/total_Rs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/total_pages"
                android:layout_marginTop="14dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/total_rs"
                android:textColor="@color/darkBlack"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/edit_Rs"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_below="@+id/edit_Pages"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/edi"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="19sp"/>

            <Button
                android:id="@+id/done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/total_Rs"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:background="@drawable/btnblue"
                android:elevation="10dp"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="19sp"/>
            
        </RelativeLayout>
    </LinearLayout>
</ScrollView>